--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-scripts": "2.1.8"
   },
   "scripts": {
@@ -12,7 +12,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "config": {
     "commitizen": {
@@ -30,6 +32,8 @@
   ],
   "devDependencies": {
     "commitizen": "^3.1.1",
-    "cz-conventional-changelog": "^2.1.0"
-  }
+    "cz-conventional-changelog": "^2.1.0",
+    "gh-pages": "^2.2.0"
+  },
+  "homepage": "http://cyxuan0926.github.io/react-tic-tac-toe"
 }
