--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cy-my-app-demo",
   "version": "0.1.0",
+  "homepage": "https://cyxuan0926.github.io/react-tic-tac-toe",
   "private": true,
   "dependencies": {
     "react": "^16.12.0",
@@ -34,6 +35,5 @@
     "commitizen": "^3.1.1",
     "cz-conventional-changelog": "^2.1.0",
     "gh-pages": "^2.2.0"
-  },
-  "homepage": "http://cyxuan0926.github.io/react-tic-tac-toe"
+  }
 }
